--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@ionic/react": "^8.5.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
