--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "7.0.1",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@ionic/react": "^8.5.0",
+    "@ionic/react-router": "^8.5.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.6.1",
@@ -26,7 +27,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
     "@capacitor/cli": "7.2.0",
